--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -3,7 +3,12 @@ large = 'screen and (max-width: 991px)'
 xlarge = 'screen and (max-width: 1200px)'
 
 body
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif
+  font-size 16px
+  color #273b47
+  text-rendering optimizeLegibility
+  -webkit-font-smoothing antialiased
+
 //**************************************** LOGIN ****************************************************
 .bgimage
   background-image url("../imagenes/background_login.jpg")
@@ -87,6 +92,14 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
     height 300px
   @media medium
     height 450px
+
+.banner-white
+  background-linear-gradient(top,rgba(255,255,255,0.6),rgba(255,255,255,8),url("../imagenes/banner.jpg"))
+  background-position center center
+  background-repeat no-repeat
+  background-attachment fixed
+  background-size cover
+  height 300px
 
 
 .banner-hv
@@ -174,3 +187,49 @@ label
 .ezdz-dropzone
   width 50%
   height 100px
+
+//-------------------------------------footer------------------------------------
+.footer-content
+  height 50px
+  background-color: #273b47
+
+.footer-contact-info a
+  color white
+  font-weight 28px
+
+.row-home
+  position relative
+  height 300px
+
+.vcenter
+  position absolute
+  top 0
+  bottom 0
+  margin auto
+  left 0
+  right 0
+
+.title-A
+  font-size 28px
+  font-weight 700
+  margin 30px
+
+.title-A-p p
+  text-align center
+
+.login-info
+  font-size 22px
+  font-weight bold
+
+.footer-content p
+  color white
+
+.body-content
+  margin-bottom 20px
+
+
+
+
+
+.loginForm input
+  margin-top 13px
