--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -94,7 +94,7 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
     height 450px
 
 .banner-white
-  background-linear-gradient(top,rgba(255,255,255,0.6),rgba(255,255,255,8),url("../imagenes/banner.jpg"))
+  background-linear-gradient(top,rgba(255,255,255,0.5),rgba(255,255,255,0.5),url("../imagenes/banner.jpg"))
   background-position center center
   background-repeat no-repeat
   background-attachment fixed
@@ -214,6 +214,10 @@ label
   font-weight 700
   margin 30px
 
+.title-A-p
+  padding 20px
+  background #fff
+
 .title-A-p p
   text-align center
 
@@ -227,8 +231,13 @@ label
 .body-content
   margin-bottom 20px
 
-
-
+.circle-home span
+  height 130px
+  width 130px
+  border-radius 50%
+  font-size 70px
+  padding 30px
+  color white
 
 
 .loginForm input
