--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -94,7 +94,7 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
     height 450px
 
 .banner-white
-  background-linear-gradient(top,rgba(255,255,255,0.5),rgba(255,255,255,0.5),url("../imagenes/banner.jpg"))
+  background-linear-gradient(top,rgba(39,59,71,0.5),rgba(39,59,71,0.5),url("../imagenes/banner.jpg"))
   background-position center center
   background-repeat no-repeat
   background-attachment fixed
@@ -190,8 +190,19 @@ label
 
 //-------------------------------------footer------------------------------------
 .footer-content
-  height 50px
   background-color: #273b47
+
+.footer-social-list
+  margin 0
+  padding 0
+
+.footer-social-list li
+  padding 0px 5px
+  color white
+
+.footer-social-list p
+  padding 0px 20px
+  color white
 
 .footer-contact-info a
   color white
@@ -202,6 +213,7 @@ label
   height 300px
 
 .vcenter
+  padding 30px
   position absolute
   top 0
   bottom 0
@@ -239,6 +251,18 @@ label
   padding 30px
   color white
 
+.footer-content .row
+  padding 10px
 
 .loginForm input
   margin-top 13px
+
+.creador p
+  font-size 10px
+  margin 0
+
+.navbar-btn
+  margin 8px 20px
+
+.btn-modal
+  margin 10px
