--- a/templates/base.jade
+++ b/templates/base.jade
@@ -46,16 +46,24 @@ html(lang="es")
                                     a(href="/logout/") Salir
                                         span(class="glyphicon glyphicon-log-out pull-left")
                         |{% else %}
-                        button(type="button",class="btn btn-success navbar-btn",style="margin-right:10px;",data-toggle="modal",data-target="#login-social") Iniciar Sesión
+                        button(type="button",class="btn btn-success navbar-btn",data-toggle="modal",data-target="#login-social") Iniciar Sesión
                         | {% endif %}
         div(style="margin-top:50px;")
         button(value="{{user.identificacion}}",style="display:none;",id="identificacion")
         block body_content
-        footer(class="footer-content")
-            div(class="container-fluid")
+        footer
+            div(class="container-fluid footer-content")
                 div(class="row")
-                    div(class="col-md-12 text-center",style="margin-top:15px;")
-                        p &copy2016
+                    div(class="col-md-6 text-center")
+                    div(class="col-md-6 text-center")
+                        p(class="inline") Contáctanos:
+                        ul(class="footer-social-list text-center inline")
+                            a(href="https://www.facebook.com/fastworkcolombia/",target="_blank")
+                                li(class="fa fa-facebook-square fa-2x")
+                            li(class="fa fa-twitter-square fa-2x")
+                            li(class="fa fa-skype fa-2x")
+                    div(class="col-md-12 text-center creador")
+                        p Desarrollado por Diego Andres Fonseca | &copy2016
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.js")
         script(src="{% static 'js/moment.es.js' %}")
