--- a/templates/home.jade
+++ b/templates/home.jade
@@ -23,7 +23,7 @@ block body_content
                             span(class="glyphicon glyphicon-log-in center-block",aria-hidden="true",style="background:#C43F3B;")
                         h3(class="login-info text-center") Suscribete o inicia sesión, es gratuito
                         p.
-                            Puedes suscribirte o iniciar sesión usando tu cuenta de &copyFacebook, &copyTwitter o &copyGmail,
+                            Puedes suscribirte o iniciar sesión usando tu cuenta de &regFacebook, &regTwitter o &regGmail,
                             solo usamos estas cuentas para generar tu usuario y conocer tu correo electrónico,
                             de ninguna manera compartiremos tu información con terceros, si lo prefieres tambien puedes registrarte de manera
                             tradicional confirmando tu correo electrónico.
@@ -95,7 +95,8 @@ block body_content
                                                     input(type="email",class="form-control",id="email",name="email",placeholder="Email")
                                                 div(class="col-md-12")
                                                     input(type="password",class="form-control",id="password",name="password",placeholder="Contraseña")
-                                    input(type="submit",class="btn btn-success pull-right",value="Iniciar Sesión",id="guardarFormacionModal")
+                                    button(type="submit",class="btn btn-success btn-modal",id="guardarFormacionModal") Iniciar Sesión
+                                    button(type="button",class="btn btn-info btn-modal") Registrarme
 
 
 
