--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -266,3 +266,49 @@ label
 
 .btn-modal
   margin 10px
+
+.ofertas
+  padding 20px
+
+.filtros
+  background #273b47
+  color white
+
+.palabras
+  background #d9d9d9
+  padding 7px
+
+.palabras p
+  display inline
+
+.palabras span
+  margin-right 10px
+
+.filtros p
+  margin 0
+  padding 7px
+
+.input-100
+  width 90%
+  margin 10px
+  padding 5px
+
+.input-70
+  width 70%
+  margin 10px
+
+.formulario-filtro
+  display block
+  padding 10px
+  border solid 1px #d9d9d9
+
+.categoria
+  height 200px
+  border solid 1px #d9d9d9
+
+  & div
+    margin 10px
+
+.departamento
+  height 200px
+  border solid 1px #d9d9d9
