--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -1,8 +1,10 @@
+small = 'screen and (max-width: 620px)'
 medium = 'screen and (max-width: 767px)'
 large = 'screen and (max-width: 991px)'
 xlarge = 'screen and (max-width: 1200px)'
 
 body
+  background #f7f5f5
   font-family: 'Lato', sans-serif
   font-size 16px
   color #273b47
@@ -92,6 +94,8 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
     height 300px
   @media medium
     height 450px
+  @media small
+    height 550px
 
 .banner-white
   background-linear-gradient(top,rgba(39,59,71,0.5),rgba(39,59,71,0.5),url("../imagenes/banner.jpg"))
@@ -113,6 +117,8 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
     height 300px
   @media medium
     height 450px
+  @media small
+    height 550px
 
 @media medium
   .information-user
@@ -228,7 +234,6 @@ label
 
 .title-A-p
   padding 20px
-  background #fff
 
 .title-A-p p
   text-align center
@@ -275,8 +280,9 @@ label
   color white
 
 .palabras
-  background #d9d9d9
+  background #6a9ad0
   padding 7px
+  color white
 
 .palabras p
   display inline
@@ -300,11 +306,20 @@ label
 .formulario-filtro
   display block
   padding 10px
-  border solid 1px #d9d9d9
+  border solid 1px #6a9ad0
+
+ul
+  list-style none
+  padding 0
+  margin 5px 20px
+
+  & li
+    margin-bottom 7px
 
 .categoria
   height 200px
-  border solid 1px #d9d9d9
+  border solid 1px #6a9ad0
+  overflow scroll
 
   & div
     margin 10px
@@ -312,3 +327,54 @@ label
 .departamento
   height 200px
   border solid 1px #d9d9d9
+
+.card
+  background white
+  padding 20px
+  min-height 150px
+  border 1px solid #d9d9d9
+  border-radius 10px
+  box-shadow 2px 2px 2px #d9d9d9
+  margin-bottom 10px
+
+.inline
+  display inline
+
+.propiedad
+  margin 7px
+  & span
+    margin-right 10px
+
+.title-oferta
+  font-size 21px
+  font-weight 700
+  margin 0
+
+.disable_link
+  pointer-events none
+  cursor default
+  color #273b47
+  &:hover
+    text-decoration none
+    color #273b47
+
+.verificada
+  color #25944D
+  margin-right 5px
+
+.time-icon
+  color #BD1915
+
+.gps-icon
+  color #25944D
+
+.categoria-icon
+  color #009EB2
+
+#palabra
+  margin-left 12px
+
+.close-link
+  color rgb(255,0,0)
+  &:hover
+    color rgb(155,0,0)
