--- a/templates/base.jade
+++ b/templates/base.jade
@@ -71,5 +71,6 @@ html(lang="es")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js",integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS",crossorigin="anonymous")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js")
         script(src="https://cdn.jsdelivr.net/jquery.chained/0.9.9/jquery.chained.remote.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.5.2/jquery.timeago.min.js")
         script(src="{% static 'js/bootstrap-notify.min.js' %}")
         block extra_script
